# everparse

./: .gitattributes  .gitignore  .gitmodules  .mitls_version  Dockerfile  Dockerfile.Linux  EverParse.fst.config.json  Makefile  Makefile.qd  README-cbor.md  README-ccs2025.md  README.md  benchmark.sh  build-evercddl.sh  configure  deps.Makefile  env.sh  fstar-cddl.sh  fstar-vscode-assistant.md  fstar.sh  fstar_emacs.sh  fstarpkg.Dockerfile  git.Dockerfile  make-images.sh  minimal.Dockerfile  nofstar.Makefile  optimizing.md  package.Makefile  package.sh  reprnotes.txt  shell.sh  version.txt  vldata.rfc
c3d/: .gitignore  CMakeLists.txt  Makefile  Notes  README.md  ROADMAP.md  build.sh  c3d.syntax
c3d/driver/: CMakeLists.txt  main.cpp
c3d/package/: Dockerfile  Dockerfile.clang
c3d/patches/: clang-parsedattrinfo-parsing-v1.patch
c3d/src/: C3d.cpp  C3d.h  CMakeLists.txt  Makefile  README.md
c3d/tests/: .gitignore  arrays.3d.expected  arrays.h  arrays.preprocessed.h.expected  basic0.3d.expected  basic0.expected  basic0.h  basic0.preprocessed.h.expected  basic1.h  basic2.h  case.3d.expected  case.h  case.preprocessed.h.expected  mutable_and_actions.3d.expected  mutable_and_actions.preprocessed.h.expected  prelude.h  synthetic1.3d.expected  synthetic1.h  synthetic1.preprocessed.h.expected
doc/: .gitignore  (+40 more)
opt/: .gitignore  Makefile  advance.Makefile  env.Makefile  everparse-deps.opam  everparse-deps.opam.locked  everparse-upgrade.sh  fstar-deps.opam.locked  git-clone.Makefile  hashes.Makefile  karamel-deps.opam.locked  opam-env.sh  pulse-deps.opam.locked  release.Makefile.disabled  shell.sh  snapshot.sh  start-code-server.sh  upgrade.md
opt/FStar/: Makefile
opt/FStar/dune/fstar-guts/fstarc.ml/: FStarC_CheckedFiles.ml  FStarC_Common.ml  FStarC_Errors.ml  FStarC_Extraction_Krml.ml  FStarC_Extraction_ML_Modul.ml  FStarC_Extraction_ML_Term.ml  FStarC_Extraction_ML_UEnv.ml  FStarC_Find_Z3.ml  FStarC_Interactive_Ide.ml  FStarC_Interactive_Ide_Types.ml  FStarC_Interactive_Incremental.ml  FStarC_Interactive_JsonHelper.ml  FStarC_Interactive_Legacy.ml  FStarC_Interactive_Lsp.ml  FStarC_Interactive_PushHelper.ml  FStarC_Interactive_QueryHelper.ml  FStarC_Main.ml  FStarC_Options.ml  FStarC_Options_Ext.ml  FStarC_Parser_AST.ml  FStarC_Parser_AST_Diff.ml  FStarC_Parser_Const.ml  FStarC_Parser_Dep.ml  FStarC_Parser_ToDocument.ml  FStarC_Range_Type.ml  FStarC_SMTEncoding_Encode.ml  FStarC_SMTEncoding_EncodeTerm.ml  FStarC_SMTEncoding_Env.ml  FStarC_SMTEncoding_Pruning.ml  FStarC_SMTEncoding_Solver.ml  FStarC_SMTEncoding_SolverState.ml  FStarC_SMTEncoding_Term.ml  FStarC_SMTEncoding_Util.ml  FStarC_Syntax_DsEnv.ml  FStarC_Syntax_Formula.ml  FStarC_Syntax_Hash.ml  FStarC_Syntax_Resugar.ml  FStarC_Syntax_Syntax.ml  FStarC_Syntax_Util.ml  FStarC_Tactics_Monad.ml  (+18 more)
opt/FStar/dune/fstar-plugins/plugins.ml/: FStar_Reflection_V1_Formula.ml  FStar_Reflection_V2_Formula.ml  FStar_Tactics_CanonCommMonoidSimple_Equiv.ml  FStar_Tactics_LaxTermEq.ml  FStar_Tactics_MApply0.ml  FStar_Tactics_MkProjectors.ml  FStar_Tactics_NamedView.ml  FStar_Tactics_Parametricity.ml  FStar_Tactics_PrettifyType.ml  FStar_Tactics_V1_Derived.ml  FStar_Tactics_V1_Logic.ml  FStar_Tactics_V2_Derived.ml  FStar_Tactics_V2_SyntaxHelpers.ml  FStar_Tactics_Visit.ml
opt/FStar/dune/libapp/ulib.ml/: FStar_Algebra_CommMonoid_Fold.ml  FStar_Algebra_Monoid.ml  FStar_Array.ml  FStar_Axiomatic_Array.ml  FStar_BV.ml  FStar_BigOps.ml  FStar_Bijection.ml  FStar_BitVector.ml  FStar_Calc.ml  FStar_Cardinality_Universes.ml  FStar_Class_Add.ml  FStar_Class_Eq.ml  FStar_Class_Eq_Raw.ml  FStar_Class_Ord_Raw.ml  FStar_Class_Printable.ml  FStar_Class_TotalOrder_Raw.ml  FStar_Classical.ml  FStar_ConstantTime_Integers.ml  FStar_Crypto.ml  FStar_DependentMap.ml  FStar_Endianness.ml  FStar_Fin.ml  FStar_FiniteMap_Base.ml  FStar_FiniteSet_Base.ml  FStar_FunctionalExtensionality.ml  FStar_FunctionalQueue.ml  FStar_Functions.ml  FStar_GhostSet.ml  FStar_HyperStack.ml  FStar_IFC.ml  FStar_Int.ml  FStar_Int128.ml  FStar_Int_Cast.ml  FStar_IntegerIntervals.ml  FStar_Integers.ml  FStar_LexicographicOrdering.ml  FStar_List_Pure_Base.ml  FStar_List_Tot_Properties.ml  FStar_MRef.ml  FStar_Map.ml  (+64 more)
opt/FStar/dune/libplugin/ulib.pluginml/: FStar_Algebra_CommMonoid.ml  FStar_Algebra_CommMonoid_Fold.ml  FStar_Algebra_CommMonoid_Fold_Nested.ml  FStar_Algebra_Monoid.ml  FStar_Array.ml  FStar_Axiomatic_Array.ml  FStar_BigOps.ml  FStar_Cardinality_Universes.ml  FStar_Class_Add.ml  FStar_Class_Eq.ml  FStar_Class_Eq_Raw.ml  FStar_Class_Ord_Raw.ml  FStar_Class_Printable.ml  FStar_Class_TotalOrder_Raw.ml  FStar_ConstantTime_Integers.ml  FStar_Crypto.ml  FStar_DependentMap.ml  FStar_Endianness.ml  FStar_Error.ml  FStar_Fin.ml  FStar_FiniteMap_Base.ml  FStar_FiniteSet_Base.ml  FStar_FunctionalExtensionality.ml  FStar_FunctionalQueue.ml  FStar_Functions.ml  FStar_GSet.ml  FStar_GhostSet.ml  FStar_HyperStack.ml  FStar_IFC.ml  FStar_Int.ml  FStar_Int128.ml  FStar_Int_Cast.ml  FStar_IntegerIntervals.ml  FStar_Integers.ml  FStar_LexicographicOrdering.ml  FStar_List_Pure_Base.ml  FStar_MRef.ml  FStar_Map.ml  FStar_Math_Euclid.ml  FStar_Math_Fermat.ml  (+83 more)
opt/FStar/dune/tests/tests.ml/: FStarC_Tests_Data.ml  FStarC_Tests_Norm.ml  FStarC_Tests_Pars.ml  FStarC_Tests_Test.ml  FStarC_Tests_Unif.ml  FStarC_Tests_Util.ml
src/3d/ocaml/: .gitignore  Batch.ml  Hashing.ml  Hashing_Op.ml  Hashtable.ml  JSON.ml  Lisp.ml  Makefile  OS.ml  ParserDriver.ml  Z3.ml  dune  dune-project  dune.tmpl  lexer.mll  parser.mly
src/3d/ocaml/evercrypt/: HashingBase.ml  HashingBase.mli  README
src/3d/ocaml/sha/: HashingBase.ml  HashingBase.mli
src/cddl/spec/ocaml/: ABNF.ml  CDDL_Spec_AST_Print.ml  Main.ml  Parser.ml  Parser2.ml  TokenBuffer.ml  Tokens.ml  dune  dune-project  lexer.mll  parser.mly
src/cddl/spec/ocaml/evercddl-elab/: Main.ml  dune
src/cose/rust/: Cargo.toml  CoseRust.fst.config.json  EverCrypt.Ed25519.fst  EverCrypt.Ed25519.fsti  Makefile
src/cose/rust/src/: .gitignore  cbordetver.rs  cbordetveraux.rs  commonpulse.rs  coseformat.rs  lib.rs  main.rs
src/cose/rust/tests/: interop.rs
(+12663 files in other folders)
