[package]
name = "evercosign"
version = "0.1.0"
edition = "2021"

[dependencies]
static_assertions = "1.1.0"
ed25519-dalek = "2"
clap = { version = "4.5.38", features = ["derive"] }

[dev-dependencies]
rand = "0.9.1"
cose-rust = "0.1.7"

[profile.test]
inherits = "release"
lto = "fat"
opt-level = 2
