(include_subdirs unqualified)

(executable
  (name Main)
  (libraries
;    batteries
;    menhirLib
    fstar.lib
;    process
;    sha
;    yojson
     ppxlib
;    re
;    sexplib
  )
  (preprocess (pps ppx_deriving.show))
  (flags (:standard -w -8-9-11-26-27-33-39))
)

(ocamllex lexer)

(menhir
  (modules parser)
)
